# UP3D

./: .copilot-instructions.md  .gitignore  AGENTS.md  CLAUDE.md  PROJECT_STRUCTURE.md  README.md  environment.yml  pyproject.toml  setup.py
cases/analysis/: README.md
cases/demo/: README.md  _common.py  g14_sphere_oracle_experiment.py  p1_capability_demo.py
docs/: STATUS.md  agent-rules.md  capability_review_2026-07-14.md  capability_review_2026-07-15.md  demo_report.md  design.md  design_track_b.md  design_track_v.md  overview.md  roadmap.md
docs/analysis/: capability_review_2026-07-14.md  capability_review_2026-07-15.md  next_phase_priorities_2026-07-19.md
docs/archive/: agent-rules-2026-07-15.md
docs/demo_report/: track_a.md  track_b.md  track_m.md  track_p.md
docs/demo_reports/: track_b.md  track_m.md  track_p.md
docs/discussion_notes/: 20260707_1505_levelset_wake_design.md  PLAN.md  (+6 more)
pyfp3d/: __init__.py
tests/: __init__.py  conftest.py  mesh_utils.py  test_a1_instrumentation.py  test_b11_linear_ls.py  test_b11_post_unified.py  test_b12_lagged_lu_ls.py  test_b13_lagged_picard.py  test_b14_schur_ls.py  test_b15_ls_newton_freeze.py  test_b16_farfield_aux.py  test_b17_farfield_pin_gamma.py  test_b18_wingbody_transonic.py  test_b19_jacobian_3d.py  test_b1_cut_elements.py  test_b22_ls_3d_anchors.py  test_b2_multivalued.py  test_b31_pressure_taper.py  test_b31_tip_fringe.py  test_b3_lifting.py  test_b45_farfield.py  test_b4_te_control_volume.py  test_b6_newton.py  test_b6_transonic.py  test_b7_onera_m6.py  test_b8_span_blend.py  test_b8_tip_taper_ls.py  test_b9_wingbody_conforming.py  test_b9_wingbody_ls.py  test_conftest_artifacts.py  test_io_vtk.py  test_laplace_cg_iterations.py  test_laplace_mms.py  test_laplace_picard.py  test_laplace_sphere.py  test_m0_cylinder.py  test_m0_extrude.py  test_m0_naca0012.py  test_m1_onera_m6.py  test_m2_wingbody.py  (+42 more)
(+657 files in other folders)
